--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,17 @@
-# This file was updated by Duplicator on 2025-09-30 07:04:05.
+# This file was updated by Duplicator on 2025-09-30 10:09:02.
 # See the original_files_ folder for the original source_site_htaccess file.
 # BEGIN WordPress
+# Las directivas (líneas) entre «BEGIN WordPress» y «END WordPress» son
+# generadas dinámicamente y solo deberían ser modificadas mediante filtros de WordPress.
+# Cualquier cambio en las directivas que hay entre esos marcadores serán sobrescritas.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /bravobravo/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /bravobravo/index.php [L]
 </IfModule>
+
 # END WordPress
